  psycopg2cffi respectively. PyPy can be substantially faster than
  CPython in some scenarios; see `PR 23`_.

- Updated the buildout configuration to just run relstorage tests and
  to select which databases to use at build time.

.. _`PR 23`: https://github.com/zodb/relstorage/pull/23/

- zodbconvert: The ``--incremental`` option is supported with a
  FileStorage (or any storage that implements
  ``IStorage.lastTransaction()``)
  as a destination, not just RelStorages.

- zodbconvert: The ``--incremental`` option is supported with a
  RelStorage as a destination. See `PR 22`_. With contributions by
  Sylvain Viollon, Mauro Amico, and Peter Jacobs. Originally reported
  by Jan-Wijbrand Kolman.

.. _`PR 22`: https://github.com/zodb/relstorage/pull/22


- Raise a specific exception when acquiring the commit or pack locks
  fails. See `PR 18`_.

.. _`PR 18`: https://github.com/zodb/relstorage/pull/18/

- PostgreSQL 9.3: Support ``commit-lock-timeout``. Contributed in `PR
  20`_ by Sean Upton.

.. _`PR 20`: https://github.com/zodb/relstorage/pull/20

1.6.0b3 (2014-12-08)
--------------------

- Packing: Significantly reduced the RAM consumed by graph traversal during
  the pre_pack phase.  (Tried several methods; encoded 64 bit IISets turned
  out to be the most optimal.)

1.6.0b2 (2014-10-03)
--------------------

- Packing: Used cursor.fetchmany() to make packing more efficient.

1.6.0b1 (2014-09-04)
--------------------

- The local cache is now more configurable and uses ``zlib`` compression
  by default.

- Added support for ``zodburi``, which means you can open a storage
  using "postgres:", "mysql:", or "oracle:" URIs.

- Packing: Reduced RAM consumption while packing by using IIBTree.Set
  instead of built-in set objects.

- MySQL 5.5: The test suite was freezing in checkBackwardTimeTravel. Fixed.

- Added performance metrics using the perfmetrics package.

- zodbconvert: Add an --incremental option to the zodbconvert script,